vlib/v/checker/tests/struct_embed_invalid_type.vv
type Foo = int

struct Bar {
	Foo
}
